--- a/frontend/.env
+++ b/frontend/.env
@@ -1,3 +1,3 @@
 REACT_APP_MAP_KEY=AIzaSyAYdp6JWyJaD-2Jiil3ggePxUBDIMpD-Kg
-REACT_APP_API_URL=http://stagin.tk:8000/
+REACT_APP_API_URL=http://staging.tk:4000/
 #REACT_APP_API_URL=http://localhost:8000/
